checkdown 0.0.2 (13.03.2020)
  - add random value in question_id, so it is possible not to specify it all the time.
  - add type "radio" and to "autocheck_question()" function.
  - add possibility to have multiple answers

checkdown 0.0.1 (02.03.2020)
  - initial release.